created products category, all products, product detail views and urls

--- a/harvestsaver/accounts/templates/accounts/layout.html
+++ b/harvestsaver/accounts/templates/accounts/layout.html
@@ -78,6 +78,8 @@
         <div class="container">
             {% block accounts %}
             {% endblock %}
+            {% block category %}
+            {% endblock %}
         </div>
     </section>
 
