--- a/harvestsaver/accounts/templates/accounts/layout.html
+++ b/harvestsaver/accounts/templates/accounts/layout.html
@@ -67,6 +67,12 @@
           </li>
           <li><a href="contact.html">Contact</a></li>
           <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
+          <li class="position-relative">
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+              {{current_user_total_quantity}}
+            </span>
+            <i class="ps-3 pe-1 bi bi-cart4 cart-icon"></i> 
+          </li>
         </ul>
       </nav><!-- .navbar -->
 
