created order model, added delete item from cart, added add items to cart, reduce items quintity from cart views and there url

--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -69,12 +69,14 @@
           {% endif %}
           <li><a href="contact.html">Contact</a></li>
           <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
-          <li class="position-relative">
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-              {{current_user_total_quantity}}
-            </span>
-            <i class="ps-3 pe-1 bi bi-cart4 text-white cart-icon"></i> 
-          </li>
+          <a href="{% url 'farm:cart_items' %}">
+            <li class="position-relative">
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                  {{current_user_total_quantity}}
+                </span>
+                <i class="ps-3 pe-1 bi bi-cart4 text-white cart-icon"></i>
+            </li>
+          </a>
         </ul>
       </nav><!-- .navbar -->
 
