--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -71,9 +71,11 @@
           <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
           <a href="{% url 'farm:cart_items' %}">
             <li class="position-relative">
+                {%if current_user_total_quantity%}
                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                   {{current_user_total_quantity}}
                 </span>
+                {%endif%}
                 <i class="ps-3 pe-1 bi bi-cart4 text-white cart-icon"></i>
             </li>
           </a>
