--- a/harvestsaver/farm/templates/farm/cart_items.html
+++ b/harvestsaver/farm/templates/farm/cart_items.html
@@ -8,6 +8,11 @@
 {% block category %}
 
 <section>
+    {% if number_of_items <= 0 %}
+    <div class="p-3 my-1 bg-white">
+        <h3 class="text-center">No item(s) added to cart.</h3>
+    </div>
+    {% endif %}
     <div class="container bg-light row">
         <div class="card col-md-9">
             <div class="m-2">
@@ -79,11 +84,13 @@
                 <div class="p-2 text-center">
                     <h6>Subtotal ({{number_of_items}} items) ksh {{total}}</h6>
                 </div>
+                {% if number_of_items >= 1 %}
                 <a href="{% url 'farm:checkout' %}">
                     <div class="bg-warning m-2 rounded-pill">
                         <h4>checkout</h4>
                     </div>
                 </a>
+                {% endif %}
             </div>
         </div>
     </div>
