--- a/harvestsaver/farm/templates/farm/chackout.html
+++ b/harvestsaver/farm/templates/farm/chackout.html
@@ -45,16 +45,16 @@
                 <h3 class="my-2">Order Summary</h3>
                 <div class="d-flex justify-content-between">
                     <p>Items:</p>
-                    <p>ksh 56000</p>
+                    <p>ksh {{total}}</p>
                 </div>
                 <div class="d-flex justify-content-between">
-                    <p>Shipping:</p>
-                    <p>ksh 56000</p>
+                    <p>Shipping: 3%</p>
+                    <p>ksh {{shipping}}</p>
                 </div>
                 <hr>
                 <div class="d-flex justify-content-between">
                     <h4 class="text-danger">Total payment</h4>
-                    <p>ksh 56000</p>
+                    <p>ksh {{total_cost}}</p>
                 </div>
                 <hr>
                 <div class="text-center m-3 bg-info">
