--- a/harvestsaver/farm/templates/farm/equipment_detail.html
+++ b/harvestsaver/farm/templates/farm/equipment_detail.html
@@ -18,16 +18,49 @@
             <div class="d-flex">
                 <p class="pe-2 border-end">Owner: {{equipment.owner.username}}</p>
                 <p class="px-2 border-end border-start">Contact: <strong>{{equipment.owner.phone_number}}</strong></p>
-                <p class="px-2 border-start bg-warning">Availabilty: {% if equipment.is_available%}Available{%else%}Unavailable{%endif%}</p>
+                <p class="px-2 border-end border-start bg-warning">Availabilty: {% if equipment.is_available%}Available{%else%}Unavailable{%endif%}</p>
+                <p class="px-2 border-start"> Location: {{equipment.location}}</p>
             </div>
             <div class="text-center">
                 <h5 class="py-2 bg-info rounded-pill">Price: ksh {{equipment.price_per_hour}} per hour</h5>
             </div>
             <div class="text-center">
-                <button class="btn btn-primary btn-lg rounded-pill">Contact Owner</button>
+                <button class="btn btn-primary btn-lg rounded-pill contact_owner">Contact Owner</button>
             </div>
         </div>
     </div>
+    
+    <section id="contact" class="contact">
+        <div class="container overlay-container" id="overlayContainer" data-aos="fade-up">
+          <div class="overlay mt-4" id="overlay">
+            <div class="m-3">
+                <p class="ms-3">Owner: {{equipment.owner.first_name}} {{equipment.owner.last_name}}</p>
+            </div>
+            <div class="">
+              <form action="{% url 'farm:equipment_detail' equipment.slug %}" method="post" role="form" class="contact_owner_form">
+                {% csrf_token %}
+                <div class="row">
+                  <div class="col-md-6 form-group">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  </div>
+                  <div class="col-md-6 form-group mt-3 mt-md-0">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  </div>
+                </div>
+                <div class="form-group mt-3">
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                </div>
+                <div class="form-group mt-3">
+                  <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                </div>
+                <div class="text-center mt-2"><button class="btn btn-primary" type="submit">Send Message</button></div>
+              </form>
+            </div>
+  
+          </div>
+  
+        </div>
+      </section><!-- End Contact Section -->
 </div>
 
 {% endblock %}
