--- a/harvestsaver/static/assets/css/morestyle.css
+++ b/harvestsaver/static/assets/css/morestyle.css
@@ -22,3 +22,23 @@
 .cart-icon {
     font-size: 36px;
 }
+
+.overlay-container {
+    display: none;
+    position: fixed;
+    background-color: blueviolet;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    
+  }
+
+  .overlay {
+    background: orange;
+    padding: 20px;
+    border-radius: 10px;
+  }
