added login required to cart view

--- a/harvestsaver/farm/templates/farm/product_detail.html
+++ b/harvestsaver/farm/templates/farm/product_detail.html
@@ -8,6 +8,11 @@
 {% block category %}
     <section>
         <div class="">
+            <div>
+                {% for message in messages %}
+                    <p class="p-2 bg-danger text-white">{{message}}</p>
+                {%endfor%}
+            </div>
             <div class="row">
                 <div class="col-md-6">
                     <img src="{{product.image.url}}" class="img-fluid"
