--- a/harvestsaver/accounts/templates/accounts/login.html
+++ b/harvestsaver/accounts/templates/accounts/login.html
@@ -6,8 +6,6 @@
 {% endblock %}
 
 {% block accounts %}
-
-
     <div class="container login-bg border">
       <div class="row d-flex justify-content-center align-items-center h-100 pt-2">
         <div class="col-md-9 col-lg-6 col-xl-5">
@@ -15,7 +13,7 @@
             class="img-fluid" alt="Sample image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-          <form action="{% url 'accounts:login' %}" method="post">
+          <form action="{% url 'accounts:login' %}?next={{ request.GET.next }}" method="post">
             {% csrf_token %}
             <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
               <p class="lead fw-normal mb-0 me-3">Sign in with</p>
