created app transit for transportation of goods, created model Transportbooking

--- a/harvestsaver/farm/templates/farm/chackout.html
+++ b/harvestsaver/farm/templates/farm/chackout.html
@@ -31,6 +31,26 @@
                         <input type="text" name="payment_method" placeholder="Payment method" required>
                     </div>
                 </div>
+                <div class="my-4 p-3">
+                    <div >
+                        <h3><li>Transport method <span class="bg-danger p-2">(farm transit)</span></li></h3>
+                    </div>
+                    <div >
+                        <div class="mb-2">
+                        <label>
+                            <input type="radio" name="transport_option" value="Express Delivery" required>
+                            Express Delivery
+                        </lebel>
+                        </div>
+                        <div>
+                        <label>
+                            <input type="radio" name="transport_option" value="Standard Delivery" required>
+                            Standard Delivery
+                        </lebel>
+                        </div>
+                        
+                    </div>
+                </div>
             </ol>
             <hr>
             <div class="text-center">
