added transport feature where customers can select the transport they want in checkout

--- a/harvestsaver/farm/templates/farm/chackout.html
+++ b/harvestsaver/farm/templates/farm/chackout.html
@@ -50,6 +50,10 @@
                         </div>
                         
                     </div>
+                    <div class="mt-3">
+                        <label>pickup_location</label>
+                        <input type="text" name="pickup_location" placeholder="Pickup_location" required>
+                    </div>
                 </div>
             </ol>
             <hr>
