--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -173,7 +173,7 @@
             <div>
               <h4 class="title">Farm transit</h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="{% url 'transit:transporthome' %}" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
