--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -73,7 +73,7 @@
           <li><a href="{% url 'accounts:login' %}">Login</a></li>
           <li><a href="{% url 'accounts:register' %}">Signin</a></li>
           {% endif %}
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="{% url 'accounts:contact' %}">Contact</a></li>
           <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
           <a href="{% url 'farm:cart_items' %}">
             <li class="position-relative">
