added contact, about us views and urls, added also push notification for contact us

--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -66,7 +66,7 @@
               {% endfor %}
             </ul>
           </li>
-          <li><a href="">About</a></li>
+          <li><a href="{% url 'accounts:aboutus' %}">About</a></li>
           {% if user.is_authenticated %}
           <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
           {% else %}
@@ -135,7 +135,7 @@
             <div class="col-lg-3 col-6">
               <div class="stats-item text-center w-100 h-100">
                 <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Equipment Owners</p> {{request.user.username}}
+                <p>Equipment Owners</p>
               </div>
             </div><!-- End Stats Item -->
 
@@ -194,49 +194,6 @@
 
       </div>
     </section><!-- End Featured Services Section -->
-
-    <!-- ======= About Us Section ======= -->
-    <section id="about" class="about pt-0">
-      <div class="container" data-aos="fade-up">
-
-        <div class="row gy-4">
-          <div class="col-lg-6 position-relative align-self-start order-lg-last order-first">
-            <img src="{% static 'assets/img/about.jpg' %}" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
-          </div>
-          <div class="col-lg-6 content order-last  order-lg-first">
-            <h3>About Us</h3>
-            <p>
-              Dolor iure expedita id fuga asperiores qui sunt consequatur minima. Quidem voluptas deleniti. Sit quia molestiae quia quas qui magnam itaque veritatis dolores. Corrupti totam ut eius incidunt reiciendis veritatis asperiores placeat.
-            </p>
-            <ul>
-              <li data-aos="fade-up" data-aos-delay="100">
-                <i class="bi bi-diagram-3"></i>
-                <div>
-                  <h5>Ullamco laboris nisi ut aliquip consequat</h5>
-                  <p>Magni facilis facilis repellendus cum excepturi quaerat praesentium libre trade</p>
-                </div>
-              </li>
-              <li data-aos="fade-up" data-aos-delay="200">
-                <i class="bi bi-fullscreen-exit"></i>
-                <div>
-                  <h5>Magnam soluta odio exercitationem reprehenderi</h5>
-                  <p>Quo totam dolorum at pariatur aut distinctio dolorum laudantium illo direna pasata redi</p>
-                </div>
-              </li>
-              <li data-aos="fade-up" data-aos-delay="300">
-                <i class="bi bi-broadcast"></i>
-                <div>
-                  <h5>Voluptatem et qui exercitationem</h5>
-                  <p>Et velit et eos maiores est tempora et quos dolorem autem tempora incidunt maxime veniam</p>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End About Us Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="products" class="services pt-0">
@@ -389,10 +346,9 @@
           <h4>Useful Links</h4>
           <ul>
             <li><a href="{% url 'farm:home' %}">Home</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a href="{% url 'accounts:aboutus' %}">About us</a></li>
+            <li><a href="{% url 'accounts:contact' %}">Contact</a></li>
             <li><a href="#products">Products</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
           </ul>
         </div>
 
