--- a/harvestsaver/accounts/templates/accounts/layout.html
+++ b/harvestsaver/accounts/templates/accounts/layout.html
@@ -6,22 +6,18 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>{% block title %} {%endblock%}</title>
-  
+  <title>{%block title%}{%endblock%}</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,
-  600;0,700;1,300;1,400;1,600;1,700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;
-  1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;
-  1,600;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -39,60 +35,68 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="header d-flex align-items-center fixed-top">
+  <header id="header" class="header d-flex align-items-center fixed-top main-bg">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="{% url 'farm:home' %}" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>HarvestSaver</h1>
+        <h1>HarvestSaver Nextwork</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li><a href="{% url 'farm:home' %}" class="active">Home</a></li> 
+          
+          <li class="dropdown"><a href="#equipment"><span>Equipments</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              {% for cat in equipment_categories %}
+              <li><a href="{% url 'farm:equipment_category' cat.slug %}">{{cat}}</a></li>
+              {% endfor %}
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a class="get-a-quote border" href="get-a-quote.html">Get a Quote</a></li>
-          
-          <li class="position-relative border">
-            <a href="{% url 'farm:cart_items' %}">
-              {%if current_user_total_quantity%}
-              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                {{current_user_total_quantity}}
-              </span>
-              {% endif%}
-              <i class="bi bi-cart4 cart-icon"></i>
-            </a>
+          <li class="dropdown"><a href="#products"><span>Products</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+            <ul>
+              {% for cat in categories %}
+              <li><a href="{% url 'farm:products_category' cat.slug %}">{{cat}}</a></li>
+              {% endfor %}
+            </ul>
           </li>
-
+          <li><a href="{% url 'accounts:aboutus' %}">About</a></li>
+          {% if user.is_authenticated %}
+          <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
+          {% else %}
+          <li><a href="{% url 'accounts:login' %}">Login</a></li>
+          <li><a href="{% url 'accounts:register' %}">Signin</a></li>
+          {% endif %}
+          <li><a href="{% url 'accounts:contact' %}">Contact</a></li>
+          <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
+          <a href="{% url 'farm:cart_items' %}">
+            <li class="position-relative">
+                {%if current_user_total_quantity%}
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                  {{current_user_total_quantity}}
+                </span>
+                {%endif%}
+                <i class="ps-3 pe-1 bi bi-cart4 text-white cart-icon"></i>
+            </li>
+          </a>
         </ul>
       </nav><!-- .navbar -->
 
     </div>
   </header><!-- End Header -->
+  <!-- End Header -->
 
-  <main id="main" class="main-bg">
-    <section>
-        <div class="container">
-            {% block accounts %}
-            {% endblock %}
-            {% block category %}
-            {% endblock %}
-        </div>
+  <main id="main">
+
+    <section class="sample-page">
+      <div class="">
+        {% block accounts %}
+        {% endblock %}
+        {% block category %}
+        {% endblock %}
+    </div>
     </section>
 
   </main><!-- End #main -->
@@ -102,49 +106,54 @@
 
     <div class="container">
       <div class="row gy-4">
-        <div class="col-lg-5 col-md-12 footer-info">
+        <div class="col-lg-4 col-md-12 footer-info">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span>HarvestSaver</span>
+            <span>HarvestSaver Nextwork</span>
           </a>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+          <p>Follow us on Social media</p>
           <div class="social-links d-flex mt-4">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://twitter.com/Dennismusembi1" class="twitter"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.facebook.com/dennis.musembi.731" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/dennis-musembi-83a18bb7/" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="{% url 'farm:home' %}">Home</a></li>
+            <li><a href="{% url 'accounts:aboutus' %}">About us</a></li>
+            <li><a href="{% url 'accounts:contact' %}">Contact</a></li>
+            <li><a href="#products">Products</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-1 col-6 footer-links">
+          <h4>Products</h4>
+          <ul>
+            {% for cat in equipment_categories %}
+            <li><a href="{% url 'farm:equipment_category' cat.slug %}">{{cat.name}}</a></li>
+            {% endfor %}
           </ul>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
-          <h4>Our Services</h4>
+          <h4>Equipments</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            {% for cat in categories %}
+            <li><a href="{% url 'farm:products_category' cat.slug %}">{{cat.name}}</a></li>
+            {% endfor %}
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
           <p>
-            A108 Adam Street <br>
-            New York, NY 535022<br>
-            United States <br><br>
-            <strong>Phone:</strong> +1 5589 55488 55<br>
-            <strong>Email:</strong> info@example.com<br>
+            Biashara street <br>
+            Nairobi<br>
+            Kenya <br><br>
+            <strong>Phone:</strong> +254 712 930 893<br>
+            <strong>Email:</strong> dennissoftware3@gmail.com<br>
           </p>
 
         </div>
@@ -154,10 +163,10 @@
 
     <div class="container mt-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>HarvestSaver</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>HarvestSaver Nextwork</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://welearncodes.com">BootstrapMade</a>
+        Designed by <a href="">HarvestSaver Network</a>
       </div>
     </div>
 
@@ -168,7 +177,6 @@
 
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
   <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'assets/vendor/purecounter/purecounter_vanilla.js' %}"></script>
   <script src="{% static 'assets/vendor/glightbox/js/glightbox.min.js' %}"></script>
@@ -176,7 +184,6 @@
   <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
   <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
 
-  <!-- Template Main JS File -->
   <script src="{% static 'assets/js/main.js' %}"></script>
   <script src="{% static 'assets/js/more.js' %}"></script>
 
