added stripe payment feature

--- a/harvestsaver/farm/templates/farm/product_detail.html
+++ b/harvestsaver/farm/templates/farm/product_detail.html
@@ -7,7 +7,7 @@
 
 {% block category %}
     <section>
-        <div class="">
+        <div class="container">
             <div>
                 {% for message in messages %}
                     <p class="p-2 bg-danger text-white">{{message}}</p>
