--- a/harvestsaver/farm/templates/farm/chackout.html
+++ b/harvestsaver/farm/templates/farm/chackout.html
@@ -7,92 +7,94 @@
 
 {% block category %}
 <section>
-    <form action="{% url 'farm:checkout' %}" method="post">
-        {% csrf_token %}
-    <div class="container bg-light row p-2">
-        <div class="col-md-9 ">
-            <ol>
-                <div class="d-flex justify-content-between my-4 p-3">
-                    <div>
-                        <h3><li>Shipping Address</li></h3>
-                    </div>
-                    <div class="">
-                        <input type="address" name="address" placeholder="Shipping address" required>
-                    </div>
-                    <div class="">
-                        
-                    </div>
-                </div>
-                <div class="my-4 p-3">
-                    <div >
-                        <h3><li>Payment method</li></h3>
-                    </div>
-                    <div >
-                        <input type="text" name="payment_method" placeholder="Payment method" required>
-                    </div>
-                </div>
-                <div class="my-4 p-3">
-                    <div >
-                        <h3><li>Transport method <span class="bg-danger p-2">(farm transit)</span></li></h3>
-                    </div>
-                    <div >
-                        <div class="mb-2">
-                        <label>
-                            <input type="radio" name="transport_option" value="Express Delivery" required>
-                            Express Delivery
-                        </lebel>
+    <div class="container">
+        <form action="{% url 'farm:checkout' %}" method="post">
+            {% csrf_token %}
+            <div class="container bg-light row p-2">
+                <div class="col-md-9 ">
+                    <ol>
+                        <div class="d-flex justify-content-between my-4 p-3">
+                            <div>
+                                <h3><li>Shipping Address</li></h3>
+                            </div>
+                            <div class="">
+                                <input type="address" name="address" placeholder="Shipping address" required>
+                            </div>
+                            <div class="">
+                                
+                            </div>
                         </div>
-                        <div>
-                        <label>
-                            <input type="radio" name="transport_option" value="Standard Delivery" required>
-                            Standard Delivery
-                        </lebel>
+                        <div class="my-4 p-3">
+                            <div >
+                                <h3><li>Payment method</li></h3>
+                            </div>
+                            <div >
+                                <input type="text" name="payment_method" placeholder="Payment method" required>
+                            </div>
                         </div>
-                        
+                        <div class="my-4 p-3">
+                            <div >
+                                <h3><li>Transport method <span class="bg-danger p-2">(farm transit)</span></li></h3>
+                            </div>
+                            <div >
+                                <div class="mb-2">
+                                <label>
+                                    <input type="radio" name="transport_option" value="Express Delivery" required>
+                                    Express Delivery
+                                </lebel>
+                                </div>
+                                <div>
+                                <label>
+                                    <input type="radio" name="transport_option" value="Standard Delivery" required>
+                                    Standard Delivery
+                                </lebel>
+                                </div>
+                                
+                            </div>
+                            <div class="mt-3">
+                                <label>pickup_location</label>
+                                <input type="text" name="pickup_location" placeholder="Pickup_location" required>
+                            </div>
+                        </div>
+                    </ol>
+                    <hr>
+                    <div class="text-center">
+                        <button class="btn btn-secondary btn-lg" type="submit">Pay now</button>
                     </div>
-                    <div class="mt-3">
-                        <label>pickup_location</label>
-                        <input type="text" name="pickup_location" placeholder="Pickup_location" required>
+                </div>
+                <div class="col-md-3 card">
+                    <div class="card-body">
+                        <div class="bg-warning m-2 text-center">
+                            <h4>Payment method</h4>
+                        </div>
+                        <h3 class="my-2">Order Summary</h3>
+                        <div class="d-flex justify-content-between">
+                            <p>Items:</p>
+                            <p>ksh {{total}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p>Shipping: 3%</p>
+                            <p>ksh {{shipping}}</p>
+                        </div>
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <h4 class="text-danger">Total payment</h4>
+                            <p>ksh {{total_cost}}</p>
+                        </div>
+                        <hr>
+                        <div class="text-center m-3 bg-info">
+                            <p>You can always track your goods using farm transit.</p>
+                        </div>
+                        <hr>
+                        <div class="text-center">
+                            <button class="btn btn-secondary btn-lg" type="submit">Pay now</button>
+                        </div>
                     </div>
                 </div>
-            </ol>
-            <hr>
-            <div class="text-center">
-                <button class="btn btn-secondary btn-lg" type="submit">Pay now</button>
+                
             </div>
-        </div>
-        <div class="col-md-3 card">
-            <div class="card-body">
-                <div class="bg-warning m-2 text-center">
-                    <h4>Payment method</h4>
-                </div>
-                <h3 class="my-2">Order Summary</h3>
-                <div class="d-flex justify-content-between">
-                    <p>Items:</p>
-                    <p>ksh {{total}}</p>
-                </div>
-                <div class="d-flex justify-content-between">
-                    <p>Shipping: 3%</p>
-                    <p>ksh {{shipping}}</p>
-                </div>
-                <hr>
-                <div class="d-flex justify-content-between">
-                    <h4 class="text-danger">Total payment</h4>
-                    <p>ksh {{total_cost}}</p>
-                </div>
-                <hr>
-                <div class="text-center m-3 bg-info">
-                    <p>You can always track your goods using farm transit.</p>
-                </div>
-                <hr>
-                <div class="text-center">
-                    <button class="btn btn-secondary btn-lg" type="submit">Pay now</button>
-                </div>
-            </div>
-        </div>
-        
+        </form>
     </div>
-</form>
 </section>
 
 {% endblock %}
