fixed bug at payment app

--- a/harvestsaver/payment/templates/payment/landing.html
+++ b/harvestsaver/payment/templates/payment/landing.html
@@ -189,7 +189,7 @@ button:disabled {
       <button type="button" id="checkout-button">Checkout</button>
 
       <hr />
-      <h2>Checkout using custom payment flow</h2>
+      <h2>Checkout using Farmpay App</h2>
       {%comment%}
       <form id="payment-form">
         <input type="text" id="email" placeholder="Email address" />
