--- a/harvestsaver/farm/templates/farm/category.html
+++ b/harvestsaver/farm/templates/farm/category.html
@@ -8,13 +8,12 @@
 {% block category %}
 <section>
      <!-- ======= Services Section ======= -->
-     <section id="service" class="services pt-0"> 
+     <section id="service" class="services mt-0"> 
         {% if flag %}
         <div class="container" data-aos="fade-up">
-  
           <div class="section-header">
-            <span>{{equip_category}}</span>
-            <h2>{{equip_category}}</h2>
+            <span>{{category}}</span>
+            <h2>{{category}}</h2>
   
           </div>
   
