--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -74,7 +74,7 @@
           <li><a href="{% url 'accounts:register' %}">Signin</a></li>
           {% endif %}
           <li><a href="{% url 'accounts:contact' %}">Contact</a></li>
-          <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
+          <li><a class="get-a-quote" href="{% url 'transit:transportquote' %}">Get a Quote</a></li>
           <a href="{% url 'farm:cart_items' %}">
             <li class="position-relative">
                 {%if current_user_total_quantity%}
@@ -321,7 +321,6 @@
             <li><a href="{% url 'farm:home' %}">Home</a></li>
             <li><a href="{% url 'accounts:aboutus' %}">About us</a></li>
             <li><a href="{% url 'accounts:contact' %}">Contact</a></li>
-            <li><a href="#products">Products</a></li>
           </ul>
         </div>
 
