--- a/harvestsaver/accounts/templates/accounts/register.html
+++ b/harvestsaver/accounts/templates/accounts/register.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block accounts %}
-
+<div class="container">
 <section class="vh-100 gradient-custom">
     <div class="container h-100">
       <div class="row justify-content-center align-items-center h-100">
@@ -197,6 +197,7 @@
         </div>
       </div>
     </div>
-  </section>
+</section>
+</div>
 
 {% endblock %}
