--- a/harvestsaver/accounts/templates/accounts/register.html
+++ b/harvestsaver/accounts/templates/accounts/register.html
@@ -7,17 +7,17 @@
 
 {% block accounts %}
 <div class="container">
-<section class="vh-100 gradient-custom">
+<section class="gradient-custom">
     <div class="container h-100">
       <div class="row justify-content-center align-items-center h-100">
-        <div class="col-12 col-lg-9 col-xl-7">
+        <div class="col-12 col-md-6 col-lg-9 col-xl-7">
           <div class="card shadow-2-strong card-registration" style="border-radius: 10px;">
             {% for message in messages %}
             <div class="bg-{{message.tags}} text-white p-2">
                 <h4 class="text-center">{{message}}</h4>
             </div>
             {% endfor %}
-            <div class="card-body p-2 p-md-2">
+            <div class="card-body p-2 p-md-1">
               <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Registration Form</h3>
               <form action="{% url 'accounts:register' %}" method="post">
                 {% csrf_token %}
@@ -30,7 +30,7 @@
                     </div>
   
                   </div>
-                  <div class="col-md-7 mb-4">
+                  <div class="col-md-7 mb-2">
   
                     <div class="form-outline">
                       <input type="text" name="last_name" class="form-control form-control-lg" />
@@ -49,7 +49,7 @@
                     </div>
   
                   </div>
-                  <div class="col-md-7 mb-4">
+                  <div class="col-md-7 mb-2">
   
                     <h6 class="mb-2 pb-1">Gender: </h6>
   
@@ -75,7 +75,7 @@
                 </div>
   
                 <div class="row">
-                  <div class="col-md-5 mb-4 pb-2">
+                  <div class="col-md-5 mb-4 pb-1">
   
                     <div class="form-outline">
                       <input type="email" name="email" class="form-control form-control-lg" required />
@@ -83,7 +83,7 @@
                     </div>
   
                   </div>
-                  <div class="col-md-7 mb-4 pb-2">
+                  <div class="col-md-7 mb-4 pb-1">
   
                     <div class="form-outline">
                       <input type="tel" name="phone_number" class="form-control form-control-lg" />
@@ -94,9 +94,9 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-md-5 mb-4 pb-2">
+                  <div class="col-md-5 mb-4 pb-1">
                     <label class="form-label select-label">Role</label>
-                    <div class="col-12">
+                    <div class="form-outline">
                       <select class="select form-control-lg" name="role" required>
                         <option value="" disabled selected>Choose option</option>
                         <option value="customer">Customer</option>
@@ -118,10 +118,10 @@
                           <option value="burudi">Burudi</option>
                           <option value="cabo verde">Cabo verde</option>
                           <option value="cameroon">Cameroon</option>
-                          <option value="central africa republic">Central Africa Republic</option>
+                          
                           <option value="chad">Chad</option>
                           <option value="comoros">Comoros</option>
-                          <option value="democratic republic of congo">Democratic Republic of Congo (DRC)</option>
+                         
                           <option value="cote d'lvoire">Cote d'lvoire</option>
                           <option value="djiboute">Djiboute</option>
                           <option value="egypt">Egypt</option>
