--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -142,7 +142,7 @@
         </div>
 
         <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
-          <img src="{% static 'assets/img/hero-img.svg' %}" class="img-fluid mb-3 mb-lg-0" alt="hero image">
+          <img src="{% static 'assets/img/farm-bg.jpg' %}" class="img-fluid mb-3 mb-lg-0" alt="hero image">
         </div>
 
       </div>
